fix unit tests for RssServlet
git-svn-id: https://svn.apache.org/repos/asf/archiva/trunk@1210509 13f79535-47bb-0310-9956-ffa450edef68